# tetris2

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
fe/: package-lock.json  package.json  webpack.config.js
fe/src/: animation.js  app.js  canvas.js  conn.js  field.js  game.js  gamepad.js  index.js  menu.js  quad.js  shaders.js  text.js  ui.js
src/: field.js  game.js  index.js  player.js
tetris/: Cargo.toml
tetris-core/: Cargo.toml
tetris-core/src/: field.rs  geom.rs  lib.rs
tetris-server/: Cargo.toml
tetris-server/src/: client.rs  game.rs  http.rs  main.rs  protocol.rs
tetris-wasm/: Cargo.toml
tetris-wasm/src/: lib.rs
tetris/src/: field.rs  geom.rs  main.rs
